test/Fail/Issue4121-1.err
Issue4121-1.agda:15.5-7: error: [NotInScope]
Not in scope:
  c′ at Issue4121-1.agda:15.5-7
when scope checking c′
